--- a/res/css/settings.css
+++ b/res/css/settings.css
@@ -5,7 +5,7 @@ body#NoAConfig {
     background: transparent linear-gradient(to bottom, rgba(01, 115, 109, 0.9) 0%, rgba(0, 0, 0, 0.5) 100%);
     border: 1px solid #01B0AA;
     border-radius: 40px;
-    padding: 1px;
+    margin: 0px!important;
     !important
 }
 
